myStyles.css
/* Import Fonts */
@import url('https://fonts.googleapis.com/css?family=Marvel|Nobile&display=swap');

body {
    font-family: 'Nobile', sans-serif;
    margin: 0;
    overflow-wrap: break-word;
    overflow-x: hidden;
}

.header {
    background-color: floralwhite;
    position: sticky;
    top: 0;
    width: 100%;
    font-size: 32px;
    padding-top: 10px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    padding-bottom: 20px;
    text-align: center;
    z-index: 10;
}

.person_info {
    position: relative;
}

.sound {
    background-image: url(https://iccowan.github.io/csc160_temp_wdd_css/speaker.svg);
    background-size: contain;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
    display: inline;
    position: absolute;
    z-index: 1;
    bottom: 1.2em;
    transform: translateX(-20px) rotate(-30deg);
    background-color: gold;
    border-radius: 100%;
    border-width: 3px;
    border-style: solid;
    border-color: gold;
}

.header .sound {
    z-index: 11;
    bottom: 45px;
}

.sound:hover {
    cursor: pointer;
}

.username {
    font-family: 'Nobile', sans-serif;
    text-align: center;
    display: block;
}

h1, h2, h3, h4, h5, h6, .title {
    font-family: 'Marvel', sans-serif;
}

.title {
    display: block;
    font-size: 2em;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
}

.person_image {
    width: 100px;
    display: inline;
    margin-left: auto;
    margin-right: auto;
}

.nav {
    margin-right: -600px;
    animation-name: scrollIn;
    animation-fill-mode: forwards;
    animation-delay: 3s;
    animation-duration: 1500ms;
}

@keyframes scrollIn {
    from {
        margin-right: -600px;
        opacity: 0;
    }
    to {
        margin-right: 20px;
        opacity: 1.0;
    }
}

#special1 {
    /* https://pngimg.com/uploads/ironman/ironman_PNG29.png */
    background-image: url(ironman-stand.png);
    position: fixed;
    left: 0;
    height: 100px;
    width: 100px;
    background-size: 40px;
    background-repeat: no-repeat;
    margin-top: -50px;
    margin-left: 20px;
    z-index: 100;
    
    animation-name: scrollInIronMan;
    animation-duration: 4s;
}

@keyframes scrollInIronMan {
    0% {
        /* https://pngimg.com/uploads/ironman/ironman_PNG29.png */
        background-image: url(ironman.png);
        background-size: 100px;
        margin-left: 100%;
        margin-top: -50px;
    }
    60% {
        /* https://pngimg.com/uploads/ironman/ironman_PNG29.png */
        background-image: url(ironman.png);
        background-size: 100px;
        margin-left: 20px;
        margin-top: -50px;
    }
    80% {
        margin-top: -80px;
        /* https://pngimg.com/uploads/ironman/ironman_PNG4.png */
        background-image: url(ironman-stop.png);
        background-size: 50px;
    }
    100% {
        margin-top: -50px;
        /* https://pngimg.com/uploads/ironman/ironman_PNG22.png */
        background-image: url(ironman-stand.png);
        background-size: 40px;
    }
}

.nav a {
    background-color: gold;
    padding: 5px 10px 5px 10px;
    border-width: 2px;
    border-color: transparent;
    border-style: solid;
    background-clip: padding-box;
    font-size: 18px;
    color: red;
    text-decoration: none;
    margin: 0;
    float: right;
}

.nav a:hover {
    background-color: red;
    color: gold;
}

/* Body */

#special3 ~ * {
    margin-left: 20%;
    margin-right: 20%;
    margin-bottom: 20px;
}

/* Mostly Home */
.day-box {
    margin-bottom: 20px;
    margin-top: 20px;
    border-style: solid;
    border-radius: 5px;
    border-width: 2px;
    padding: 15px;
}

.PREP {
    background-color: floralwhite;
    color: red;
}

.CURRENT {
    background-color: gold;
    color: red;
}

.COMPLETED {
    background-color: red;
    color: gold;
}

.day-box .day {
    font-size: 18px;
    font-style: italic;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: inherit;
    margin-bottom: 5px;
}

.reading-box, .lab-box, .prep-box {
    padding: 5px;
    border-style: solid;
    border-width: 1px;
    border-color: inherit;
    border-radius: 5px;
    margin-bottom: 5px;
}

.reading-box:empty, .lab-box:empty, .prep-box:empty {
    display: none;
}

.assignment-label {
    font-size: 16px;
    font-style: italic;
    float: left;
    margin-right: 20px;
}

.day-box a {
    text-decoration: none;
    color: inherit;
    margin-bottom: 2px;
}

.reading:hover, .assignmentWidget:hover {
    color: black;
}

.assignmentWidget .assignment-title {
    float: left;
}

.assignmentWidget .grade {
    float: right;
    height: 100%;
}

.lab-box, .prep-box {
    width: auto;
    overflow: auto;
}

input, textarea {
    padding: 5px;
    border-radius: 5px;
    font-size: 14px;
    width: 50%;
    display: block;
    margin-top: 5px;
}

textarea {
    width: -webkit-fill-available;
}

label {
    display: block;
    margin-top: 10px;
    margin-bottom: 5px;
}

input:focus, textarea:focus {
    background: #f0efed;
}

input[type=submit] {
    width: auto;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
    margin-top: 20px;
}

input[type=submit]:hover {
    background-color: #f0efed;
    cursor: pointer;
}

.partners:hover {
    max-height: 1000px;
    overflow: hidden;
    transition: max-height 1s ease-in;
    cursor: default;
    margin-bottom: 20px;
}

.partners {
    font-size: 18px;
    height: auto;
    max-height: 18px;
    transition: max-height 1s ease-out;
    overflow: hidden;
    font-size: 18px;
    margin-right: 10px;
    margin-left: 10px;
    margin-bottom: 10px;
    font-size: 18px;
    height: auto;
    max-height: 18px;
    transition: max-height 1s ease-out;
}

.partners a {
    text-decoration: none;
    background-color: gold;
    color: red;
    padding: 5px 10px 5px 10px;
    border-radius: 5px;
    font-size: 10px;
}

.partners .sound {
    width: 15px;
    height: 15px;
    transform: translateX(-10px) rotate(-30deg);
}

.partners img {
    width: 50px;
}

.partners .person_info {
    margin-top: 20px;
    margin-bottom: 10px;
    height: 10%;
}

input[readonly=true] {
    background: #dddd;
    color: rgba(0,0,0,0.5);
    cursor: default;
}

div.login .person_info {
    margin-top: 20px;
}

div.login div.username {
    font-family: inherit;
}

div.login .person_info .username {
    border-bottom-width: 1px;
    border-bottom-style: solid;
    margin-bottom: 10px;
}

div.login .username {
    text-align: left;
}

*:not(div) > .assignment-title {
    font-family: 'Marvel', sans-serif;
    display: block;
    font-size: 2em;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
}

.assignment_title {
    font-family: 'Marvel', sans-serif;
    display: block;
    font-size: 2em;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
}

.prompt, .assignment_prompt, .question p, .rubric_score, .rubric_comments {
    background: floralwhite;
    border-width: 1px;
    border-style: solid;
    padding: 10px;
    border-radius: 5px;
}

.assignment_prompt, .rubric_score, .question textarea {
    margin-bottom: 20px;
}

.rubric_score span, .rubric_comments span {
    font-size: 18px;
    font-style: italic;
    display: block;
    margin-bottom: 10px;
}

.rubric_score table td, .rubric_score table th {
    padding: 5px;
}

.rubric_score table {
    border: none;
}

.grade-table {
    background-color: floralwhite;
    border-style: solid;
    border-color: red;
    border-width: 1px;
    border-radius: 5px;
    padding: 5px;
    width: -webkit-fill-available;
}

.grade-table tr:nth-child(odd) {
    background-color: gold;
}

.grade-table tr:nth-child(even) {
    background-color: red;
    color: gold;
    border-color: white;
}

.grade-table td {
    padding: 10px;
}

iframe {
    width: -webkit-fill-available;
    height: 300px;
    border-radius: 5px;
    border-style: solid;
    border-width: 1px;
}

.view_text {
    border-style: solid;
    border-width: 1px;
    border-color: red;
    padding: 10px;
    border-radius: 5px;
    background-color: floralwhite;
}

table{
    border-style: inset;
    border-color: red;
    width: -webkit-fill-available;
}

table tbody tr:nth-child(1) {
    background-color: gold;
    border-style: outset;
}

tr td:nth-child(n+2) {
    padding-right: 10%;
}

table tr:nth-child(n+2) {
    background-color: floralwhite;
}

table tr td {
    border-style: outset;
}

h1,h3 {
    background: gold;
    border-style: outset;
    outline: ridge;
    outline-color: red;
    padding-left: 10px;
}

h1 {
    outline: none;
    border-style: ridge;
    border-color: red;
    border-width: 3px;
    border-radius: 5px;
}

body {
    background-image: url("https://pngimg.com/uploads/ironman/ironman_PNG60.png");
    background-size: 30% 35%;
    background-repeat: no-repeat;
    background-position: right;
}

.grade-table tr td {
    padding-right: 5px;
}

